Downgrade to java 8, remove module, switch to gradle